fixed some errors

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                                 What is Idea Ignite?</li><p class="indentation"><b class="bold">Idea Ignite</b> is an idea pitching competition that brings together innovators to present their ideas on sustainability,
                                                     blockchain, AI/ML, and related emerging technologies. It offers a platform to showcase impactful solutions.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                When and where is the event?</li><p class="indentation">The event will take place on 3rd October 2024, from 9:30 AM to 1:30 PM at Jyothi Engineering College,
+                                                When and where is the event?</li><p class="indentation">The event will take place on 2nd October 2024, from 9:30 AM to 1:30 PM at Jyothi Engineering College,
                                                     Thrissur.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 Who can participate in Idea Ignite?</li><p class="indentation">Students, innovators, and professionals with ideas related to sustainability, blockchain, AI/ML, or any relevant
@@ -380,7 +380,7 @@
                                                 How can I register for the competition?</li><p class="indentation">You can register through our event website by clicking the "Register" button. Detailed instructions will guide you
                                                     through the process.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 28th September 2024. Be sure to submit your application before the
+                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 23rd September 2024. Be sure to submit your application before the
                                                     deadline to secure your spot.</p>
                                         </ol>
                                     </div>
@@ -409,7 +409,7 @@
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 How much time will each team get to pitch?</li><p class="indentation">Each team will have 5-7 minutes to present their idea, followed by a brief Q&A session with the judges.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                Can I participate as part of a team?</li><p class="indentation">Yes, participants can join individually or form teams of up to 4 members.</p>
+                                                Can I participate as part of a team?</li><p class="indentation">Yes, participants can form teams ranging from 2 to 4 members, but cannot participate individually.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 What technologies or tools can be used in the pitch?</li><p class="indentation">You can use any technology or platform to support your idea, such as prototypes, presentations, or videos.
                                                     Ensure it aligns with the event's themes of sustainability, blockchain, and AI/ML.</p>
