added devfolio button and removed the form section from bottom of site.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                             <div class="hero-cta">
 								<a class="button button-primary" id="registerButton" href="www.google.com">------</a>
 							</div>
+                            <div 
+                                class="apply-button" 
+                                data-hackathon-slug="http://aida-ideaignite.devfolio.co/" 
+                                data-button-theme="light"
+                                style="height: 44px; width: 312px;margin-top:20px;"
+                            ></div>
 						</div>
 						<div class="hero-media">
 							<div class="header-illustration">
@@ -208,7 +214,7 @@
                             <div class="container left">
                                 <div class="content">
                                     <div class = "time-tile">
-                                        <h2 class="time-heading" style="padding-top: 20px;">16th Sept. 9:30 AM</h2>
+                                        <h2 class="time-heading" style="padding-top: 20px;">18th Sept. 9:30 AM</h2>
                                     </div>
                                     <div class = "time-tile">
                                         <!-- <p class="time-desc"> Participants can begin registering for the competition through the event website</p> -->
@@ -241,7 +247,7 @@
                             <div class="container right">
                                 <div class="content">
                                     <div class = "time-tile">
-                                        <h2 class="time-heading">30th Sept. 07:00 PM</h2>
+                                        <h2 class="time-heading">2nd Oct. 9:30 AM</h2>
                                     </div>
                                     <div class = "time-tile">
                                         <!-- <p class="time-desc"> Participants can begin registering for the competition through the event website</p> -->
@@ -428,31 +434,13 @@
                                                 What should I bring to the event?</li><p class="indentation">Please bring a laptop or any other device needed to present your idea, along with any supporting materials such as
                                                     prototypes, presentation slides, or handouts.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                How do I contact the organizers for further questions?</li><p class="indentation">If you have any other queries, please reach out to us at [Insert Contact Information] or email give email for
+                                                How do I contact the organizers for further questions?</li><p class="indentation">If you have any other queries, please reach out to us at <a class="bold" href="mailto:aida@jecc.ac.in" id="contact">aida@jecc.ac.in</a> or email give email for
                                                     more details.</p>
                                         </ol>
                                     </div>
 								</div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </section>
-
-			<section class="cta section">
-                <div class="container-sm">
-                    <div class="cta-inner section-inner">
-                        <div class="cta-header text-center">
-                            <h2 class="section-title mt-0" style="margin-bottom: 50px;" id="contact">Contact Us</h2>
-                            <form action="#" class="contact-full-form">
-                                <div>
-                                  <input type="text" placeholder="Your Name" required>
-                                  <input type="email" placeholder="Your Email" required>
-                                </div>
-                                <textarea placeholder="Your Message" rows="4" required></textarea>
-                                <button type="submit" style="margin-top: 50px;">Submit</button>
-                            </form>                       
-					    </div>
                     </div>
                 </div>
             </section>
@@ -468,9 +456,6 @@
                         </a>
                     </div>
                     <ul class="footer-links list-reset">
-                        <li>
-                            <a href="#contact"  onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' }); return false;">Contact</a>
-                        </li>
                         <li>
                             <a href="#aboutEvent" onclick="document.getElementById('aboutEvent').scrollIntoView({ behavior: 'smooth' }); return false;">About us</a>
                         </li>
@@ -499,12 +484,25 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright" onclick="redirectFunction('https://www.google.com/webhp?authuser=0')">&copy; 2024 Built with ❤️ | AIDA</div>
+                    <div class="footer-copyright">&copy; 2024 Built with ❤️ | AIDA</div>
                 </div>
             </div>
         </footer>
     </div>
 
     <script src="dist/js/main.min.js"></script>
+    <script>
+        // Function to add the script to the body
+        const script = document.createElement('script');
+        script.src = 'https://apply.devfolio.co/v2/sdk.js';
+        script.async = true;
+        script.defer = true;
+        document.body.appendChild(script);
+
+        // Clean up function to remove the script if necessary
+        window.onunload = () => {
+            document.body.removeChild(script);
+        };
+    </script>
 </body>
 </html>
