changed the date to  25

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <div class="container right">
                                 <div class="content">
                                     <div class = "time-tile">
-                                        <h2 class="time-heading">23rd Sept. 11:59 PM</h2>
+                                        <h2 class="time-heading">25th Sept. 11:59 PM</h2>
                                     </div>
                                     <div class = "time-tile">
                                         <!-- <p class="time-desc"> Participants can begin registering for the competition through the event website</p> -->
@@ -391,7 +391,7 @@
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 Can I update my idea after the initial submission?</li><p class="indentation">Once the registration deadline has passed, you won’t be able to modify your submission for Round 1 .However, if you’re shortlisted, you can refine and improve your pitch for Round 2.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 23rd September 2024. Be sure to submit your application before the
+                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 25th September 2024. Be sure to submit your application before the
                                                     deadline to secure your spot.</p>
                                         </ol>
                                     </div>
