cahnges the date back to 28th and added a text indication for the timer.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0 zen-dots-regular">Idea Ignite</h1>
                             <p class="hero-paragraph"><i>Pitch Your Vision for a Sustainable Future.....</i></p>
+                            <p id="timer-content">--------------------------</p>
                             <div class="countdown" id="countdown">
                                 <div class="time">
                                 </div>
@@ -226,7 +227,7 @@
                             <div class="container right">
                                 <div class="content">
                                     <div class = "time-tile">
-                                        <h2 class="time-heading">25th Sept. 11:59 PM</h2>
+                                        <h2 class="time-heading">28th Sept. 11:59 PM</h2>
                                     </div>
                                     <div class = "time-tile">
                                         <!-- <p class="time-desc"> Participants can begin registering for the competition through the event website</p> -->
@@ -391,7 +392,7 @@
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 Can I update my idea after the initial submission?</li><p class="indentation">Once the registration deadline has passed, you won’t be able to modify your submission for Round 1 .However, if you’re shortlisted, you can refine and improve your pitch for Round 2.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 25th September 2024. Be sure to submit your application before the
+                                                What is the deadline for registration?</li><p class="indentation">The last date to register for Idea Ignite is 28th September 2024. Be sure to submit your application before the
                                                     deadline to secure your spot.</p>
                                         </ol>
                                     </div>
