--- a/index.html
+++ b/index.html
@@ -513,6 +513,10 @@
     <script src="dist/js/main.min.js"></script>
     <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
     <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+    <script>
         // Function to add the script to the body
         const script = document.createElement('script');
         script.src = 'https://apply.devfolio.co/v2/sdk.js';
