added the devfolio registration link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
                             <div class="hero-cta">
-								<a class="button button-primary" id="registerButton" href="www.google.com">------</a>
+								<a class="button button-primary" id="registerButton">------</a>
 							</div>
                             <br>
                             <div 
