added some logos and fixed poster

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<img class="hero-media-illustration-image asset-dark" src="dist/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
 							</div>
 							<div class="hero-media-container">
-								<img class="hero-media-image asset-light" src="dist/images/poster-light.png" style="width: 528px;" alt="Hero media">
+								<img class="hero-media-image asset-light" src="dist/images/poster-light.jpg" style="width: 528px;" alt="Hero media">
 								<img class="hero-media-image asset-dark" src="dist/images/poster-dark.jpg" style="width:528px;" alt="Hero media">
 							</div>
 						</div>
@@ -471,8 +471,16 @@
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-							<img class="asset-light" src="dist/images/logo-dark.png" alt="Logo" style="height: 40px;">
-							<img class="asset-dark" src="dist/images/logo-dark.png" alt="Logo" style="height: 40px;">
+							<img class="asset-light" src="dist/images/logo-dark.png" alt="Logo" style="height: 40px;padding-right: 10px;">
+							<img class="asset-dark" src="dist/images/logo-dark.png" alt="Logo" style="height: 40px;padding-right: 10px;">
+                        </a>
+                        <a href="#">
+							<img class="asset-light" src="dist/images/IEDC_JECC.png" alt="Logo" style="height: 40px;padding-right: 10px;">
+							<img class="asset-dark" src="dist/images/IEDC_JECC.png" alt="Logo" style="height: 40px;padding-right: 10px;">
+                        </a>
+                        <a href="#">
+							<img class="asset-light" src="dist/images/IIC_Logo.png" alt="Logo" style="height: 40px;">
+							<img class="asset-dark" src="dist/images/IIC_Logo.png" alt="Logo" style="height: 40px;">
                         </a>
                     </div>
                     <ul class="footer-links list-reset">
