changed date from 2nd to 3rd oct

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">When and Where ?</h3>
                                     	<p class="text-sm mb-0">
-                                            <li class="bold">Date and Time :</li><p>Wednesday 2nd October 2024</p><p>9:30 AM to 1:30 PM</p>
+                                            <li class="bold">Date and Time :</li><p>Thursday 3rd October 2024</p><p>9:30 AM to 1:30 PM</p>
                                             <li class="bold">Location :</li><p>Jyothi Engineering College, Cheruthuruthy, Thrissur</p>
                                         </p>
 									</div>
@@ -147,7 +147,7 @@
                                     	<p class="text-sm mb-0">
                                             <li class="bold">Submit Your Idea :</li><p class="indentation">Craft a compelling pitch that highlights your solution's potential impact on sustainability.</p>
                                             <li class="bold">Prepare Your Presentation :</li><p class="indentation">Develop a clear and engaging presentation to showcase your idea effectively.</p>
-                                            <li class="bold">Join Us on October 2 :</li><p class="indentation">Participate in the event and share your vision with a dynamic audience.</p>
+                                            <li class="bold">Join Us on October 3rd :</li><p class="indentation">Participate in the event and share your vision with a dynamic audience.</p>
                                         </p>
 									</div>
 								</div>
@@ -249,7 +249,7 @@
                             <div class="container right">
                                 <div class="content">
                                     <div class = "time-tile">
-                                        <h2 class="time-heading">2nd Oct. 9:30 AM</h2>
+                                        <h2 class="time-heading">3rd Oct. 9:30 AM</h2>
                                     </div>
                                     <div class = "time-tile">
                                         <!-- <p class="time-desc"> Participants can begin registering for the competition through the event website</p> -->
@@ -367,7 +367,7 @@
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 What is the theme of the competition?</li><p class="indentation">The theme of the competition is <b class="bold">sustainability</b>. You are free to choose any domain—technology, healthcare, agriculture, energy, education, etc.—but your idea must contribute to creating a more sustainable future. This could involve environmental conservation, social equity, renewable resources, or any solution that promotes long-term sustainability.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
-                                                When and where is the event?</li><p class="indentation">The selected participants from <b class="bold">round 1</b>, will attend the event on <b class="bold">2nd October 2024</b>, from 9:30 AM to 1:30 PM at Jyothi Engineering College,
+                                                When and where is the event?</li><p class="indentation">The selected participants from <b class="bold">round 1</b>, will attend the event on <b class="bold">3rd October 2024</b>, from 9:30 AM to 1:30 PM at Jyothi Engineering College,
                                                     Thrissur.</p>
                                             <li class="bold" style="margin-bottom: 30px;">
                                                 Who can participate in Idea Ignite?</li><p class="indentation">Idea Ignite is open to:
